project1/test/test_11711111_2.out
Error type B at Line 5: Missing semicolon ';'
Error type B at Line 1: Missing closing curly brace '}'
