project1/test/test_11711111_2.spl
int testla() {
    int test_var_1 = 0;
    int b = 9;
    int c;
    c = b test_var_1;

